# polyquine

./: .gitignore  Cargo.toml  README.md
crates/polyquine-derive/: Cargo.toml  README.md
crates/polyquine-derive/src/: lib.rs
src/: enums.rs  fields.rs  lib.rs  macros.rs  quine.rs  structs.rs  util.rs
tests/: attributes.rs  enums.rs  structs.rs  trybuild.rs
tests/ui/fail/: bad_inner_enum.rs  bad_inner_enum.stderr  bad_inner_struct.rs  bad_inner_struct.stderr
tests/ui/succeed/: good_inner_struct.rs  goog_inner_struct.rs
