[package]
name = "polyquine"
license = "MIT"
keywords = ["proc-macro", "quote", "ToTokens", "derive", "metaprogramming"]
categories = ["development-tools::procedural-macro-helpers"]
version = "0.0.1"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
itertools = "0.14.0"
deluxe = { git = "https://github.com/gskorokhod/deluxe" }

[lib]
proc-macro = true
