[package]
name = "polyquine"
license = "MIT"
keywords = ["proc-macro", "quote", "ToTokens", "derive", "metaprogramming"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Teach Rust types to codegen their own constructors"
repository = "https://github.com/gskorokhod/polyquine"
version = "0.0.8"
edition = "2024"

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
polyquine-derive = { path = "crates/polyquine-derive", version = "0.0.8" }
ustr = "1.1.0"
syn = "2.0.101"

[dev-dependencies]
tempfile = "3.22.0"
trybuild = "1.0"
