[package]
name = "polyquine-derive"
license = "MIT"
keywords = ["proc-macro", "quote", "ToTokens", "derive", "metaprogramming"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Teach Rust types to codegen their own constructors"
repository = "https://github.com/gskorokhod/polyquine"
version = "0.0.6"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["proc-macro", "parsing"] }
